--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <!--Heading End-->
                     <tr>
                         <td width="40%">
-                            <img src="img/ayush first editing.jpg" alt="ayush kumar"  width="90%">
+                            <img src="ayush first editing.jpg" alt="ayush kumar"  width="90%">
                         </td>
                         <td width="60%">
                             <font face="arial" color="#ffffff" size="4">
@@ -139,13 +139,13 @@
                     <!--Heading End-->
                     <tr>
                         <td width="33%">
-                            <a href="service1.html"><img src="img/OIP.jpg" alt="Service1"  width="100%"></a>
+                            <a href="service1.html"><img src="OIP.jpg" alt="Service1"  width="100%"></a>
                         </td>
                         <td width="33%">
-                            <a href="service2.html"><img src="img/shutterstock_139925989.jpg" alt="Service1"  width="100%"></a>
+                            <a href="service2.html"><img src="shutterstock_139925989.jpg" alt="Service1"  width="100%"></a>
                         </td>
                         <td width="33%">
-                            <a href="service3"><img src="img/iStock-1132874986.jpg" alt="Service1"  width="100%"></a>
+                            <a href="service3"><img src="iStock-1132874986.jpg" alt="Service1"  width="100%"></a>
                         </td>
                     </tr>
                     <tr>
@@ -249,7 +249,7 @@
                            </font>
                         </td>
                         <td valign="top">
-                            <img src="img/OIP (1).jpg" alt="Achievements"  width="90%">
+                            <img src="OIP (1).jpg" alt="Achievements"  width="90%">
                         </td>
                         
                     </tr>
